--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 </head>
 <body>
 	<h1>pagina de prueba git</h1>
+	<<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel, ducimus doloribus id minus, rem illo! Quas maiores sed illum unde hic quos quibusdam deleniti assumenda? Ducimus distinctio adipisci nulla error. </p>
 </body>
 </html>
